# MLNX_OFED_SRC-5.9-0.5.6.0

./: BUILD_ID  install.pl  mst  readme
SOURCES/dapl-2.1.10.1.mlnx/: ChangeLog  Makefile.am  Makefile.in  README  README.mcm  config.h.in  configure  configure.in  dapl.spec  dapl.spec.in  mpxyd.init.in
SOURCES/ibsim-0.12/: ibsim.spec
SOURCES/iser-5.9/: iscsi_iser.c  iscsi_iser.h  iser.spec  iser_initiator.c  iser_memory.c  iser_verbs.c
SOURCES/isert-5.9/: ib_isert.c  ib_isert.h  isert.spec
SOURCES/kernel-mft-4.23.0/: dkms.conf
SOURCES/knem-1.1.4.90mlnx1/: .gitignore  COPYING  ChangeLog  Makefile.am  README  REPORTING-BUGS  common.postinst  configure.ac  dkms.conf  knem.pc.in  knem.spec
SOURCES/libvma-9.8.1/: Makefile.in  aclocal.m4  config.h.in  configure
SOURCES/libxlio-2.1.4/: Makefile.in  aclocal.m4  config.h.in  configure
SOURCES/mlnx-ethtool-6.0/: .gitignore  configure.ac  mlnx-ethtool.spec  mlnx-ethtool.spec.in
SOURCES/mlnx-iproute2-6.0.0/: Makefile  configure  mlnx-iproute2.spec
SOURCES/mlnx-nfsrdma-5.9/: backchannel.c  frwr_ops.c  mlnx-nfsrdma.spec  module.c  rpc_rdma.c  svc_rdma.c  svc_rdma_backchannel.c  svc_rdma_pcl.c  svc_rdma_recvfrom.c  svc_rdma_rw.c  svc_rdma_sendto.c  svc_rdma_transport.c  transport.c  verbs.c  xprt_rdma.h
SOURCES/mlnx-nvme-5.9/: mlnx-nvme.spec
SOURCES/mpitests-3.2.20/: Makefile  mpitests.spec  osu_pps.patch
SOURCES/ofed-scripts-5.9/: check_syntax  common.pl  hca_self_test.ofed  install.pl  is_kmp_compat.sh  mlnxofedinstall  (+8 more)
SOURCES/rdma-core-59mlnx44/kernel-boot/: CMakeLists.txt  rdma-persistent-naming.rules
(+943 files in other folders)
